# application-rag

./: .gitignore  COMMIT_STRATEGY.md  Dockerfile  database_schema.md  docker-compose.yml  main.py  pos.md  pyproject.toml  run_seed.py
app/: config.py  main.py
app/api/: routes.py
app/chroma_db/: chroma.sqlite3
app/database/: database.py
app/database/migrations/: 001_create_tables.sql  002_seed_data.sql
app/rag/: chain.py  chunker.py  embeddings.py  loader.py  vectorstore.py
app/routers/: announcement_router.py  auth_router.py  chat_router.py  kb_router.py  notification_router.py  ticket_router.py  user_router.py
app/schemas/: __init__.py  announcement.py  auth.py  chat.py  knowledge.py  notification.py  ticket.py  user.py
app/services/: ai_routing_service.py  announcement_service.py  auth_service.py  chat_service.py  kb_service.py  notification_service.py  s3_service.py  session_service.py  ticket_service.py  user_service.py
chroma_db/: chroma.sqlite3
data/: aboutUs.txt  courseweb.txt  ingestion_pipeline.py  semRegister.txt
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AdminRoute.jsx  AdminSidebar.jsx  AnnouncementBanner.jsx  Breadcrumb.jsx  FloatingChat.jsx  Footer.jsx  Hero.jsx  KnowledgebaseSection.jsx  Navbar.jsx  QuickLinks.jsx  SupportForm.jsx  SupportNavbar.jsx  ThemeToggle.jsx  WelcomeSection.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: ChatBot.jsx  Dashboard.jsx  KnowledgeBase.jsx  LandingPage.jsx  Login.jsx  Register.jsx  StudentProfile.jsx  StudentSupport.jsx  StudentTicketDetail.jsx
frontend/src/pages/admin/: AdminAnnouncements.jsx  AdminDashboard.jsx  AdminKnowledgeBase.jsx  AdminLogin.jsx  AdminTicketDetail.jsx  AdminUsers.jsx
frontend/src/services/: api.js
