[project]
name = "sliit-rag-app"
version = "0.1.0"
description = "RAG-based support assistant for SLIIT powered by LangChain and FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "langchain-core",
    "langchain-community",
    "langchain-huggingface",
    "langchain-openai",
    "sentence-transformers",
    "beautifulsoup4",
    "playwright",
    "qdrant-client",
]

[tool.setuptools.packages.find]
include = ["app*"]