[project]
name = "sliit-rag-app"
version = "0.1.0"
description = "RAG-based support assistant for SLIIT powered by LangChain and FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "python-dotenv",
    "langchain-core",
    "langchain-community",
    "langchain-huggingface",
    "langchain-openai",
    "sentence-transformers",
    "langchain-text-splitters",
    "langchain-chroma",
    "supabase>=2.28.0",
    "pydantic[email]",
    "passlib[bcrypt]",
    "python-jose[cryptography]",
]

[tool.setuptools.packages.find]
include = ["app*"]
